--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ PyRSS2Gen==1.0.0
 Pygments==1.4
 Werkzeug==0.8.3
 gunicorn==0.13.4
+gevent==0.13.6
 feedparser==5.1
 pylibmc==1.2.2
 simplejson==2.3.2
