--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-Flask==0.8
-Jinja2==2.6
-Babel==0.9.6
-MarkupSafe==0.15
-PyRSS2Gen==1.0.0
-Pygments==1.4
-Werkzeug==0.8.3
-gunicorn==0.13.4
-gevent==0.13.6
-feedparser==5.1
-pylibmc==1.2.2
-simplejson==2.3.2
-nose==1.1.2
-django-htmlmin==0.5.1
-raven>=1.4.6
+Flask
+Jinja2
+Babel
+MarkupSafe
+PyRSS2Gen
+Pygments
+Werkzeug
+gunicorn
+gevent
+feedparser
+pylibmc
+simplejson
+nose
+django-htmlmin
+raven
 blinker
-newrelic
 tornado
