--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-Flask
-Jinja2
-Babel
-MarkupSafe
-PyRSS2Gen
-Pygments
-Werkzeug
-gunicorn
-gevent
-feedparser
-pylibmc
-simplejson
-nose
-django-htmlmin
-raven
-blinker
-tornado
+Flask==0.9
+Jinja2==2.6
+Babel==0.9.6
+MarkupSafe==0.15
+PyRSS2Gen==1.0.0
+Pygments==1.5
+Werkzeug==0.8.3
+gunicorn==0.14.5
+gevent==0.13.7
+feedparser==5.1.2
+pylibmc==1.2.3
+simplejson==2.6.0
+nose==1.1.2
+django-htmlmin==0.5.2
+raven==1.9.4
+blinker==1.2
+tornado==2.3
